--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-gradient {
+  background: rgb(2, 13, 29);
+  background: linear-gradient(
+    180deg,
+    rgba(2, 13, 29, 1) 0%,
+    rgba(24, 30, 44, 1) 100%
+  );
+}
